tests/semantic/fail/scopes-fail.c
int main() {
  int a;
  int a; // a has been already declared
}
